--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -83,6 +83,10 @@
 			text-align: center;
 			color: red;
 		}
+		a {
+			margin-left: 170px;
+		}
+	
 	</style>
 
 </head>
@@ -105,6 +109,7 @@
 			<div class="btnLogin">
 				<button type="submit" class="btn btn-primary mt-5 mb-4">ENTRAR</button>
 			</div>
+			<a  th:href="@{/cadastro}"> Registre-se </a>
 			<p th:if="${mensagem != null}" th:text="${mensagem}" />
 			<p>
 		</form>
