--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -40,6 +40,7 @@
 								<li><a class="nav-link scrollto" th:href="@{/cliente/novo}">Cliente</a></li>
 								<li><a class="nav-link scrollto" th:href="@{/fornecedor/novo}">Fornecedor</a></li>
 								<li><a class="nav-link scrollto" th:href="@{/venda/novo}">Venda</a></li>
+								<li><a class="nav-link scrollto" th:href="@{/funcionario/novo}">Funcionario</a></li>
 							</ul>
 						</li>
 
@@ -55,9 +56,11 @@
 					<a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
 					<a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
 				</div>
+				<!--
 				<div th:if="${nomeusuario} !=null" class="row ml-3">
 					<span th:text="${nomeusuario}"></span>
 				</div>
+				-->
 			</div>
 		</header><!-- End Header -->
 	</div>
