--- a/src/main/resources/templates/funcionario/index.html
+++ b/src/main/resources/templates/funcionario/index.html
@@ -28,7 +28,7 @@
 	<!-- Template Main CSS File -->
 	<link href="" rel="stylesheet" th:href="@{/css/style.css}">
 
-	<title>Cadastro Cliente</title>
+	<title>Cadastro Funcionario</title>
 </head>
 
 <body>
@@ -36,12 +36,12 @@
 	<header th:include="fragmentos::header"></header>
 
 	<main class="container">
-		<form class="formulario" method="post" th:action="@{/cliente/salvar}" th:object="${cliente}">
-			<h1>Cliente</h1>
+		<form class="formulario" method="post" th:action="@{/funcionario/salvar}" th:object="${funcionario}">
+			<h1>Funcionario</h1>
 			<div class="form-row">
 				<div class="form-group col-md-12">
 					<label for="exampleInputEmail1">Codigo</label>
-					<input th:field="*{id}" type="text" readonly class="form-control" 
+					<input th:field="*{id}" type="text" readonly class="form-control"
 						aria-describedby="emailHelp" placeholder="">
 				</div>
 				<div class="form-group mb-2 col-md-8">
