--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -28,6 +28,7 @@
 									<li><a class="nav-link scrollto" th:href="@{/produto/listar}">Listar Produto</a></li>
 									<li><a class="nav-link scrollto" th:href="@{/cliente/listar}">Listar Cliente</a></li>
 									<li><a class="nav-link scrollto" th:href="@{/fornecedor/listar}">Listar Fornecedor</a>
+									<li><a class="nav-link scrollto" th:href="@{/venda/listardetalhe}">Listar Detalhe Venda</a>
 									<li><a class="nav-link scrollto" th:href="@{/venda/listar}">Listar Venda</a>
 									<li><a class="nav-link scrollto" th:href="@{/funcionario/listar}">Listar Funcionario</a>
 									</li>
@@ -107,6 +108,9 @@
 										Cliente</a></li>
 								<li><i class="bx bx-chevron-right"></i> <a th:href="@{/fornecedor/listar}">Listar
 										Fornecedor</a></li>
+								<li><i class="bx bx-chevron-right"></i> <a th:href="@{/venda/listardetalhe}">Listar
+										Detalhe Venda</a></li>
+										
 							</ul>
 						</div>
 
