--- a/src/main/resources/templates/venda/index.html
+++ b/src/main/resources/templates/venda/index.html
@@ -128,6 +128,9 @@
 		<div style="margin-top: 10px; margin-bottom: 10px;">
 			<a class="btn btn-info" id="btnSalvarVenda">SALVAR</a>
 		</div>
+		
+		<div id="mensagem-venda" class="row"></div>
+		
 	</main>
 
 	<footer th:include="fragmentos::footer"></footer>
@@ -260,8 +263,6 @@
                 itens: []
             };
             
-            var validacaoEstoqueConcluida = true;
-
             //percorrendo as linhas da tabela
 
             $("#dadostabela tr").each(function(index, elemento) {
@@ -297,17 +298,16 @@
                 data: JSON.stringify(venda),
                 success: function (response) {
                     console.log("Venda Realiza")
+                     $("#mensagem-venda").removeClass().addClass("alert alert-success").text("Venda realizada com sucesso");
                 },
                 error: function(xhr, status, error) {
                     console.log("erro")
+                    $("#mensagem-venda").removeClass().addClass("alert alert-danger").text("Erro ao realizar a venda");
+
                 }
             })
 		
 	}
-
-	
-	
-
 </script>
 </body>
 
